// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Forms/Components/Dropzone Custom drag message 1`] = `
<div
  className="storybook-container borrow-ui"
>
  <form
    onSubmit={[Function]}
  >
    <div
      style={
        Object {
          "width": 400,
        }
      }
    >
      <div
        className="borrow-ui__form__field borrow-ui__form__field--vertical"
      >
        <div
          className="borrow-ui__form__label borrow-ui__form__label--vertical borrow-ui__form__label--alignment-left"
          style={Object {}}
        >
          Documents
           
        </div>
        <div
          className="borrow-ui__form__field__controller borrow-ui__form__field__controller--vertical "
        >
          <div
            className="borrow-ui__form__dropzone"
          >
            <div
              className="borrow-ui__form__dropzone__drop-area  "
              onBlur={[Function]}
              onClick={[Function]}
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              tabIndex={0}
            >
              <input
                autoComplete="off"
                multiple={true}
                onChange={[Function]}
                onClick={[Function]}
                style={
                  Object {
                    "display": "none",
                  }
                }
                tabIndex={-1}
                type="file"
              />
              <div
                className="borrow-ui__form__dropzone__message borrow-ui__form__dropzone__message--inactive"
              >
                Drag the files here and they will be added below
              </div>
            </div>
            <div
              className="borrow-ui__form__dropzone__files"
            >
              <div
                className="borrow-ui__form__dropzone__files__file"
              >
                <span
                  className="borrow-ui__form__dropzone__files__file__name"
                >
                  First file.pdf
                </span>
                <span
                  className="borrow-ui__form__dropzone__files__file__remove "
                  onClick={[Function]}
                >
                  ×
                </span>
              </div>
              <div
                className="borrow-ui__form__dropzone__files__file"
              >
                <span
                  className="borrow-ui__form__dropzone__files__file__name"
                >
                  My profile picture.jpg
                </span>
                <span
                  className="borrow-ui__form__dropzone__files__file__remove "
                  onClick={[Function]}
                >
                  ×
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Storyshots Forms/Components/Dropzone Custom drag messages for each status 1`] = `
<div
  className="storybook-container borrow-ui"
>
  <form
    onSubmit={[Function]}
  >
    <div
      style={
        Object {
          "width": 400,
        }
      }
    >
      <div
        className="borrow-ui__form__field borrow-ui__form__field--vertical"
      >
        <div
          className="borrow-ui__form__label borrow-ui__form__label--vertical borrow-ui__form__label--alignment-left"
          style={Object {}}
        >
          Documents
           
        </div>
        <div
          className="borrow-ui__form__field__controller borrow-ui__form__field__controller--vertical "
        >
          <div
            className="borrow-ui__form__dropzone"
          >
            <div
              className="borrow-ui__form__dropzone__drop-area  "
              onBlur={[Function]}
              onClick={[Function]}
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              tabIndex={0}
            >
              <input
                autoComplete="off"
                multiple={true}
                onChange={[Function]}
                onClick={[Function]}
                style={
                  Object {
                    "display": "none",
                  }
                }
                tabIndex={-1}
                type="file"
              />
              <div
                className="borrow-ui__form__dropzone__message borrow-ui__form__dropzone__message--inactive"
              >
                Drag a file in this zone here
              </div>
            </div>
            <div
              className="borrow-ui__form__dropzone__files"
            >
              <div
                className="borrow-ui__form__dropzone__files__file"
              >
                <span
                  className="borrow-ui__form__dropzone__files__file__name"
                >
                  First file.pdf
                </span>
                <span
                  className="borrow-ui__form__dropzone__files__file__remove "
                  onClick={[Function]}
                >
                  ×
                </span>
              </div>
              <div
                className="borrow-ui__form__dropzone__files__file"
              >
                <span
                  className="borrow-ui__form__dropzone__files__file__name"
                >
                  My profile picture.jpg
                </span>
                <span
                  className="borrow-ui__form__dropzone__files__file__remove "
                  onClick={[Function]}
                >
                  ×
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Storyshots Forms/Components/Dropzone Default 1`] = `
<div
  className="storybook-container borrow-ui"
>
  <form
    onSubmit={[Function]}
  >
    <div
      style={
        Object {
          "width": 400,
        }
      }
    >
      <div
        className="borrow-ui__form__field borrow-ui__form__field--vertical"
      >
        <div
          className="borrow-ui__form__label borrow-ui__form__label--vertical borrow-ui__form__label--alignment-left"
          style={Object {}}
        >
          Documents
           
        </div>
        <div
          className="borrow-ui__form__field__controller borrow-ui__form__field__controller--vertical "
        >
          <div
            className="borrow-ui__form__dropzone"
          >
            <div
              className="borrow-ui__form__dropzone__drop-area  "
              onBlur={[Function]}
              onClick={[Function]}
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              tabIndex={0}
            >
              <input
                autoComplete="off"
                multiple={true}
                onChange={[Function]}
                onClick={[Function]}
                style={
                  Object {
                    "display": "none",
                  }
                }
                tabIndex={-1}
                type="file"
              />
              <div
                className="borrow-ui__form__dropzone__message borrow-ui__form__dropzone__message--inactive"
              >
                Drop the files here...
              </div>
            </div>
            <div
              className="borrow-ui__form__dropzone__files"
            >
              <div
                className="borrow-ui__form__dropzone__files__file"
              >
                <span
                  className="borrow-ui__form__dropzone__files__file__name"
                >
                  First file.pdf
                </span>
                <span
                  className="borrow-ui__form__dropzone__files__file__remove "
                  onClick={[Function]}
                >
                  ×
                </span>
              </div>
              <div
                className="borrow-ui__form__dropzone__files__file"
              >
                <span
                  className="borrow-ui__form__dropzone__files__file__name"
                >
                  My profile picture.jpg
                </span>
                <span
                  className="borrow-ui__form__dropzone__files__file__remove "
                  onClick={[Function]}
                >
                  ×
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Storyshots Forms/Components/Dropzone Specify max number of files 1`] = `
<div
  className="storybook-container borrow-ui"
>
  <form
    onSubmit={[Function]}
  >
    <div
      style={
        Object {
          "width": 400,
        }
      }
    >
      <div
        className="borrow-ui__form__field borrow-ui__form__field--vertical"
      >
        <div
          className="borrow-ui__form__label borrow-ui__form__label--vertical borrow-ui__form__label--alignment-left"
          style={Object {}}
        >
          Documents
           
        </div>
        <div
          className="borrow-ui__form__field__controller borrow-ui__form__field__controller--vertical "
        >
          <div
            className="borrow-ui__form__dropzone"
          >
            <div
              className="borrow-ui__form__dropzone__drop-area  "
              onBlur={[Function]}
              onClick={[Function]}
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              tabIndex={0}
            />
            <div
              className="borrow-ui__form__dropzone__files"
            >
              <div
                className="borrow-ui__form__dropzone__files__file"
              >
                <span
                  className="borrow-ui__form__dropzone__files__file__name"
                >
                  First file.pdf
                </span>
                <span
                  className="borrow-ui__form__dropzone__files__file__remove "
                  onClick={[Function]}
                >
                  ×
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;
